# udev-hid-bpf

./: .gitlab-ci.yml  .pre-commit-config.yaml  .triage-policies.yml  CLAUDE.md  meson.build
.gitlab-ci/: install.sh.jinja  make-combined-release.sh  make-config.sh  make-release.py  uninstall.sh.jinja
data/: HidUsageTables.json
doc/: case-study-spacenavigator.rst  device-matches.rst  getting-started.rst  huion-keydial-kd20.rst  index.rst  installing-from-ci.rst  other-resources.rst  report-descriptor-macros.rst  tutorial.rst  udev-properties.rst
src/: main.rs
src/bpf/: hid_bpf_helpers.h  hid_report_helpers.h  uhid-bpf-test-wrappers.h
src/bpf/stable/: 0020-XPPen__ArtistPro16Gen2.bpf.c  meson.build
src/bpf/testing/: 0010-Dell__DELL0A78.bpf.c  0010-Huion__Kamvas13Gen3.bpf.c  0010-Logitech__SpaceNavigator.bpf.c  0010-WALTOP__Batteryless-Tablet.bpf.c  0010-XPPen__ACK05.bpf.c  0010-XPPen__Deco01V3.bpf.c  0011-Synaptics__DLL0945.bpf.c  0020-Huion__Inspiroy-2-S.bpf.c  meson.build
src/bpf/userhacks/: 0010-Logitech-MX-Master-3B-middle-button.bpf.c  0010-Logitech-MX-Master-3S-horiz-scroll.bpf.c
test/: __init__.py  btf.py  meson.build  test-wrapper.c  test_dell_dell0a78.py  test_lib.py  test_synaptics_dll0945.py  uhid-test.sh
tools/: hid_report_helpers.h.jinja  sync_with_kernel_tree.py
